F2-1: playlists implemented
