# docs/swagger.yaml
@@ -55,6 +55,11 @@ definitions:
       status:
         type: string
     type: object
+  http.defaultResponse:
+    properties:
+      status:
+        type: string
+    type: object
   http.loginInput:
     properties:
       password:
@@ -64,13 +69,31 @@ definitions:
     type: object
   http.loginResponse:
     properties:
-      jwt:
-        type: string
+      id:
+        type: integer
     type: object
   http.logoutResponse:
     properties:
       status:
         type: string
+    type: object
+  http.playlistCreateInput:
+    properties:
+      cover:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      usersID:
+        items:
+          type: integer
+        type: array
+    type: object
+  http.playlistCreateResponse:
+    properties:
+      id:
+        type: integer
     type: object
   http.signUpResponse:
     properties:
@@ -87,8 +110,6 @@ definitions:
         items:
           type: integer
         type: array
-      cover:
-        type: string
       name:
         type: string
       record:
@@ -156,6 +177,21 @@ definitions:
       time.Time:
         type: string
     type: object
+  models.PlaylistTransfer:
+    properties:
+      cover:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      users:
+        items:
+          $ref: '#/definitions/models.UserTransfer'
+        type: array
+    type: object
   models.Sex:
     enum:
     - M
@@ -180,15 +216,19 @@ definitions:
         type: string
       id:
         type: integer
+      isLiked:
+        type: boolean
       listens:
         type: integer
       name:
         type: string
-      record:
+      recordSrc:
         type: string
     type: object
   models.User:
     properties:
+      avatarSrc:
+        type: string
       birthDate:
         $ref: '#/definitions/models.Date'
       email:
@@ -206,7 +246,7 @@ definitions:
     type: object
   models.UserTransfer:
     properties:
-      avatar:
+      avatarSrc:
         type: string
       birthDate:
         $ref: '#/definitions/models.Date'
@@ -696,6 +736,246 @@ paths:
       summary: Sign Up
       tags:
       - Auth
+  /api/playlists/:
+    post:
+      consumes:
+      - application/json
+      description: Create new playlist by sent object
+      parameters:
+      - description: Playlist info
+        in: body
+        name: playlist
+        required: true
+        schema:
+          $ref: '#/definitions/http.playlistCreateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Playlist created
+          schema:
+            $ref: '#/definitions/http.playlistCreateResponse'
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: User hasn't rights
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Create Playlist
+      tags:
+      - Playlist
+  /api/playlists/{playlistID}/:
+    delete:
+      description: Delete playlist with chosen ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Playlist deleted
+          schema:
+            $ref: '#/definitions/http.defaultResponse'
+        "400":
+          description: Client error
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: User hasn't rights
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Delete Playlist
+      tags:
+      - Playlist
+    get:
+      description: Get playlist with chosen ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Playlist got
+          schema:
+            $ref: '#/definitions/models.PlaylistTransfer'
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Get Playlist
+      tags:
+      - Playlist
+  /api/playlists/{playlistID}/like:
+    post:
+      description: Set like by user to chosen playlist (add to favorite)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Like set
+          schema:
+            $ref: '#/definitions/http.defaultResponse'
+        "400":
+          description: Client error
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Set like
+      tags:
+      - Playlist
+  /api/playlists/{playlistID}/tracks:
+    get:
+      description: All tracks of playlist with chosen ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Show tracks
+          schema:
+            items:
+              $ref: '#/definitions/models.TrackTransfer'
+            type: array
+        "400":
+          description: Incorrect body
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Tracks of Playlist
+      tags:
+      - Playlist
+  /api/playlists/{playlistID}/tracks/{trackID}:
+    delete:
+      description: Delete track from playlist
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Track deleted
+          schema:
+            $ref: '#/definitions/http.playlistCreateResponse'
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: User hasn't rights
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Delete Track
+      tags:
+      - Playlist
+    post:
+      description: Add track into playlist
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Track added
+          schema:
+            $ref: '#/definitions/http.playlistCreateResponse'
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: User hasn't rights
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Add Track
+      tags:
+      - Playlist
+  /api/playlists/{playlistID}/unlike:
+    post:
+      description: Remove like by user from chosen playlist (remove from favorite)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Like removed
+          schema:
+            $ref: '#/definitions/http.defaultResponse'
+        "400":
+          description: Client error
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: User unathorized
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Remove like
+      tags:
+      - Playlist
+  /api/playlists/feed:
+    get:
+      description: Feed playlists
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Playlist feed
+          schema:
+            items:
+              $ref: '#/definitions/models.PlaylistTransfer'
+            type: array
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Playlist Feed
+      tags:
+      - Feed
   /api/tracks/:
     post:
       consumes:
@@ -879,72 +1159,10 @@ paths:
           schema:
             $ref: '#/definitions/http.Error'
         "500":
-          description: Server error
+          description: Can't get user
           schema:
             $ref: '#/definitions/http.Error'
       summary: Get User
-      tags:
-      - User
-  /api/users/{userID}/albums:
-    get:
-      description: Get user's favorite albums
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Albums got
-          schema:
-            items:
-              $ref: '#/definitions/models.AlbumTransfer'
-            type: array
-        "400":
-          description: Incorrect input
-          schema:
-            $ref: '#/definitions/http.Error'
-        "401":
-          description: Unauthorized user
-          schema:
-            $ref: '#/definitions/http.Error'
-        "403":
-          description: Forbidden user
-          schema:
-            $ref: '#/definitions/http.Error'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/http.Error'
-      summary: Favorite Albums
-      tags:
-      - User
-  /api/users/{userID}/artists:
-    get:
-      description: Get user's favorite artists
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Artists got
-          schema:
-            items:
-              $ref: '#/definitions/models.ArtistTransfer'
-            type: array
-        "400":
-          description: Incorrect input
-          schema:
-            $ref: '#/definitions/http.Error'
-        "401":
-          description: Unauthorized user
-          schema:
-            $ref: '#/definitions/http.Error'
-        "403":
-          description: Forbidden user
-          schema:
-            $ref: '#/definitions/http.Error'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/http.Error'
-      summary: Favorite Artists
       tags:
       - User
   /api/users/{userID}/avatar:
@@ -984,7 +1202,100 @@ paths:
       summary: Upload Avatar
       tags:
       - User
-  /api/users/{userID}/tracks:
+  /api/users/{userID}/favorite/albums:
+    get:
+      description: Get user's favorite albums
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Albums got
+          schema:
+            items:
+              $ref: '#/definitions/models.AlbumTransfer'
+            type: array
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: Forbidden user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Favorite Albums
+      tags:
+      - User
+  /api/users/{userID}/favorite/artists:
+    get:
+      description: Get user's favorite artists
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Artists got
+          schema:
+            items:
+              $ref: '#/definitions/models.ArtistTransfer'
+            type: array
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: Forbidden user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Favorite Artists
+      tags:
+      - User
+  /api/users/{userID}/favorite/playlists:
+    get:
+      description: Get user's favorite playlists
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Playlists got
+          schema:
+            items:
+              $ref: '#/definitions/models.PlaylistTransfer'
+            type: array
+        "400":
+          description: Incorrect input
+          schema:
+            $ref: '#/definitions/http.Error'
+        "401":
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "403":
+          description: Forbidden user
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Favorite Playlists
+      tags:
+      - User
+  /api/users/{userID}/favorite/tracks:
     get:
       description: Get ser's avorite racks
       produces:
@@ -1013,6 +1324,29 @@ paths:
           schema:
             $ref: '#/definitions/http.Error'
       summary: Favorite Tracks
+      tags:
+      - User
+  /api/users/{userID}/playlists:
+    get:
+      description: All playlists of user with chosen ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Show playlists
+          schema:
+            items:
+              $ref: '#/definitions/models.PlaylistTransfer'
+            type: array
+        "400":
+          description: Client error
+          schema:
+            $ref: '#/definitions/http.Error'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.Error'
+      summary: Playlists of User
       tags:
       - User
   /api/users/{userID}/update:
@@ -1047,7 +1381,7 @@ paths:
           schema:
             $ref: '#/definitions/http.Error'
         "500":
-          description: Server error
+          description: Can't change user info
           schema:
             $ref: '#/definitions/http.Error'
       summary: Update Info
